<resources>
    <string name="app_name">UV Index Forecast</string>
    <string name="today_label">Tomorrow\'s UV Index:</string>
    <string name="uv_index_forecast_app_id">24842</string>
    <string name="high_uv_tips">Tips: Avoid the sun between 11 am. and 4 p.m. Protect skin with a high SPF sunscreen (30+), reapplying at least every two hours.</string>
    <string name="medium_uv_tips">Tips: Reduce time in the sun between 11 a.m. and 4 p.m. If outside, use sunscreen with SPF of 30 or above.</string>
    <string name="low_uv_tips">Tips: If outside for 30 minutes or more, cover up with a hat, long-sleeved clothing, or sunscreen. Look for shade near midday.</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="notification_toggle">Notify me if the UV index for tomorrow is high: </string>
    <string name="notification_threshold">Choose the UV threshold: </string>
    <string name="choose_location">Please choose your location in Settings</string>
    <string-array name="uv_index_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="loc_title">Location: </string>
    <string name="loc_name">Canadian city/town</string>
    <string name="pref_location_title">Current location: </string>
    <string name="enter_text">UV</string>
</resources>
